--- a/Client_App/Views/Forms/Forms5/Form_53.axaml
+++ b/Client_App/Views/Forms/Forms5/Form_53.axaml
@@ -86,6 +86,8 @@
                                 Command="{Binding SaveReport}"
                                 Content="Сохранить" />
                         </StackPanel>
+						
+						<Button Grid.Row="3" Content="Сформировать" Command="{Binding GenerateForm53}" ></Button>
 
                     </Grid>
                 </Border>
