--- a/Client_App/Views/Forms/Forms5/Form_52.axaml
+++ b/Client_App/Views/Forms/Forms5/Form_52.axaml
@@ -87,6 +87,8 @@
                                 Content="Сохранить" />
                         </StackPanel>
 
+						<Button Grid.Row="3" Content="Сформировать" Command="{Binding GenerateForm52}" ></Button>
+
                     </Grid>
                 </Border>
 
