--- a/Client_App/Views/Forms/Forms1/Form_10.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_10.axaml
@@ -338,7 +338,7 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
-                                Text="Наименование юр. лица" />
+                                Text="Наименование обособленного подразделения" />
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
@@ -346,11 +346,11 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
-                                Text="Адрес места нахождения юр. лица" />
+                                Text="Адрес места нахождения обособленного подразделения" />
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
-                                Text="Фактический адрес юр. лица" />
+                                Text="Фактический адрес обособленного подразделения" />
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
