--- a/Client_App/Views/Forms/Forms2/Form_20.axaml
+++ b/Client_App/Views/Forms/Forms2/Form_20.axaml
@@ -340,7 +340,7 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
-                                Text="Наименование юр. лица" />
+                                Text="Наименование обособленного подразделения" />
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
@@ -348,11 +348,11 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
-                                Text="Адрес места нахождения юр. лица" />
+                                Text="Адрес места нахождения обособленного подразделения" />
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
-                                Text="Фактический адрес юр. лица" />
+                                Text="Фактический адрес обособленного подразделения" />
                             <TextBlock
                                 Height="32"
                                 Margin="5,8"
