--- a/Client_App/Views/CompareReportsTitleForm.axaml
+++ b/Client_App/Views/CompareReportsTitleForm.axaml
@@ -532,16 +532,16 @@
                                        Text="Субъект Российской федерации"/>
                             <TextBlock Height="32"
                                        Margin="5,8"
-                                       Text="Наименование юр. лица"/>
+                                       Text="Наименование обособленного подразделения"/>
                             <TextBlock Height="32"
                                        Margin="5,0"
                                        Text="Сокращенное наименование"/>
                             <TextBlock Height="32"
                                        Margin="5,8"
-                                       Text="Адрес места нахождения юр. лица"/>
+                                       Text="Адрес места нахождения обособленного подразделения"/>
                             <TextBlock Height="32"
                                        Margin="5,8"
-                                       Text="Фактический адрес юр. лица"/>
+                                       Text="Фактический адрес обособленного подразделения"/>
                             <TextBlock Height="32"
                                        Margin="5,8"
                                        Text="ФИО, должность руководителя"/>
