--- a/Client_App/Views/Messages/GetSnkParams.axaml
+++ b/Client_App/Views/Messages/GetSnkParams.axaml
@@ -44,7 +44,9 @@
                                     Watermark="дд.мм.гг"
                                     Width="200"
                                     SelectedDate="{Binding Date, Mode=TwoWay}"/>
-				<Grid Margin="5,19,5,5" ColumnDefinitions="Auto, 100">
+				<Grid Margin="5,19,5,5" 
+                      ColumnDefinitions="Auto, 100"
+                      IsVisible="{Binding ShowRegionBlock}">
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
                                Text="Регион (00-00:)"
