--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -7,6 +7,7 @@
         xmlns:converter="clr-namespace:Client_App.Resources.CustomConverters"
         xmlns:tabs="clr-namespace:Client_App.Views.MainWindowTabs"
         xmlns:behaviors="clr-namespace:Client_App.Behaviors"
+        xmlns:viewModels="clr-namespace:Client_App.ViewModels"
         Title="{Binding Current_Db, Mode=OneWay}"
         d:DesignHeight="600"
         d:DesignWidth="800"
@@ -51,7 +52,7 @@
             <MenuItem Name="ImportMenu"
                       Header="_Импорт">
                 <MenuItem Header="Из RAODB" 
-                          IsVisible="{Binding AppLaunchedAtNORAO}">
+                          IsVisible="{Binding AppLaunchedAtNorao}">
                     <MenuItem Command="{Binding ImportRaodb}" 
                               CommandParameter="Auto"
                               Header="Импорт с авто выбором организации"/>
@@ -61,7 +62,7 @@
                 </MenuItem>
                 <MenuItem Command="{Binding ImportRaodb}"
                           Header="Из RAODB"
-                          IsVisible="{Binding AppLaunchedAtNORAO, Converter={StaticResource BoolInverterConverter}}"/>
+                          IsVisible="{Binding AppLaunchedAtNorao, Converter={StaticResource BoolInverterConverter}}"/>
                 <MenuItem Command="{Binding ImportExcel}" 
                           Header="Из Excel"/>
                 <MenuItem Command="{Binding ImportJson}" 
