--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -135,33 +135,41 @@
 						  RowDefinitions="Auto,Auto"
 						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
 						<TextBlock Text="Текущая страница"
-							Grid.Row="0" Grid.Column="0" Margin="5"/>
+							Grid.Row="0" Grid.Column="0" Margin="5"
+							VerticalAlignment="Center"/>
 
 						<controls:NumericLeftRight
 							Value="{Binding CurrentPageOrgs}"
 							Grid.Row="0" Grid.Column="1" Margin="5"
 							Minimum="1"/>
 						<TextBlock Text ="Кол-во страниц:"
-							Grid.Row="0" Grid.Column="2" Margin="5"/>
+							Grid.Row="0" Grid.Column="2" Margin="5"
+							VerticalAlignment="Center"/>
 						<TextBlock
 							Text="{Binding TotalPagesOrgs}"
-							Grid.Row="0" Grid.Column="3" Margin="5"/>
+							Grid.Row="0" Grid.Column="3" Margin="5"
+							VerticalAlignment="Center"/>
 						<TextBlock Text="Кол-во орг. на странице"
-							Grid.Row="1" Grid.Column="0" Margin="5"/>
+							Grid.Row="1" Grid.Column="0" Margin="5"
+							VerticalAlignment="Center"/>
 						<controls:NumericLeftRight
 							Value="{Binding RowsCountOrgs}"
 							Grid.Row="1" Grid.Column="1" Margin="5"
 							Minimum="1"/>
 						<TextBlock Text="Всего орг.:"
-							Grid.Row="1" Grid.Column="2" Margin="5"/>
+							Grid.Row="1" Grid.Column="2" Margin="5"
+							VerticalAlignment="Center"/>
 						<TextBlock
-							Text="{Binding TotalRowsOrgs}"
-							Grid.Row="1" Grid.Column="3" Margin="5"/>
+							Text="{Binding FilteredRowsOrgs}"
+							Grid.Row="1" Grid.Column="3" Margin="5"
+							VerticalAlignment="Center"/>
 
 						<TextBlock Text="Всего отчетов:"
-							Grid.Row="1" Grid.Column="4" Margin="5"/>
+							Grid.Row="1" Grid.Column="4" Margin="5"
+							VerticalAlignment="Center"/>
 						<TextBlock Text="{Binding TotalReportCount}"
-							Grid.Row="1" Grid.Column="5" Margin="5"/>
+							Grid.Row="1" Grid.Column="5" Margin="5"
+							VerticalAlignment="Center"/>
 					</Grid>
 				</Border>
 			</Grid>
