--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -10,7 +10,7 @@
         Title="{Binding Current_Db, Mode=OneWay}"
         d:DesignHeight="600"
         d:DesignWidth="800"
-        behaviors:WindowScreenSizeBehavior.WidthRatio="0.75" behaviors:WindowScreenSizeBehavior.HeightRatio="0.81"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.75" behaviors:WindowScreenSizeBehavior.HeightRatio="0.83"
         MinWidth="200"
         MinHeight="200"
         x:CompileBindings="True"
@@ -333,8 +333,8 @@
                          Header="Формы 3" 
                          IsVisible="False"/>
 				<TabItem x:Name="Forms4" 
-                         Header="Формы 4" 
-                         IsVisible="False">
+                         Header="Формы 4"
+                         IsVisible="{Binding AppLaunchedAtNorao, Mode=OneWay}">
 					<tabs:Forms4TabControl DataContext="{Binding Forms4TabControlVM}"/>
 			    </TabItem>
             </TabControl>
